--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="layer" id="frontLayer"><img src="https://images.unsplash.com/photo-1525577288853-c6f0a020a162?q=80&w=1738&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Front Leaves"></div>
 
   <div class="p-6 rounded-2xl bg-white/20 backdrop-blur-md shadow-xl w-full max-w-3xl relative z-10">
-    <h1 class="text-3xl font-bold text-center mb-4">🌴 Happy Birthday 🌊</h1>
+    <h1 class="text-3xl font-bold text-center mb-4">🌴 Happy Birthday Xenioxe Music 🌊</h1>
     <p class="text-center mb-6">Let the island vibes move with your music!</p>
     <input type="file" id="audioFile" accept="audio/*" class="mb-4" />
     <canvas id="visualizer" width="800" height="400"></canvas>
