--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body class="flex flex-col items-center justify-center min-h-screen text-white relative">
   <!-- Parallax Layers -->
   <div class="layer" id="bgLayer"><img src="https://images.unsplash.com/photo-1745094986791-249f34970ee5?q=80&w=1542&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Tropical Background"></div>
-  <div class="layer" id="midLayer"><img src="https://scontent-lax3-2.xx.fbcdn.net/v/t1.6435-9/96547460_3293641633988591_4392459390012096512_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=-5gRqkobnIkQ7kNvwHA4HQD&_nc_oc=AdnPMVNGeVrPs2K70NSfVNA1UkPMtNHK9Xd9XSnQe73vYN5CWfdhKrQBRaSN2Mf-PI8pMZ3FNwOUz94C2vc7x2yv&_nc_zt=23&_nc_ht=scontent-lax3-2.xx&_nc_gid=Jsc3zDTTMeT8dqlqLd_EGg&oh=00_AfXpj7qKlH5b-yeY7ENlQS9GZACgCmJWK75s-tXkxQ6Zuw&oe=68BDFB2C" alt="Palm Trees"></div>
+  <div class="layer" id="midLayer"><img src="" alt="Palm Trees"></div>
   <div class="layer" id="frontLayer"><img src="https://images.unsplash.com/photo-1525577288853-c6f0a020a162?q=80&w=1738&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Front Leaves"></div>
 
   <div class="p-6 rounded-2xl bg-white/20 backdrop-blur-md shadow-xl w-full max-w-3xl relative z-10">
